--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "git-flush"
-version = "0.1.5"
+version = "0.1.6"
 description = ""
 authors = ["Nathan Patton <npatton@gmail.com>"]
 readme = "README.md"
@@ -10,9 +10,8 @@ git-flush = "git_flush.main:app"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-typer = {extras = ["all"], version = "^0.9.0"}
-gitpython = "^3.1.41"
-
+typer = "^0.12.3"
+gitpython = "^3.1.43"
 
 [build-system]
 requires = ["poetry-core"]
