--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "git-flush"
-version = "0.1.6"
-description = ""
+version = "0.1.7"
+description = "A CLI tool to clean up a local git repository after finishing work on a feature branch."
 authors = ["Nathan Patton <npatton@gmail.com>"]
 readme = "README.md"
 
